actualizado para pago de servicios

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <button type="submit" class="btn-lg btn-warning btn-block mt-5" onclick="document.location='depositar.html'">Depósito</button>
                         <button type="submit" class="btn-lg btn-warning btn-block" onclick="document.location='retirar.html'">Retiro</button>
                         <button type="submit" class="btn-lg btn-warning btn-block">Consulta de Saldo</button>
-                        <button type="submit" class="btn-lg btn-warning btn-block">Pago de Servicios</button>
+                        <button type="submit" class="btn-lg btn-warning btn-block" onclick="document.location='pagoservisio.html'">Pago de Servicios</button>
                     </div>
                 </div>
                     <button type="submit" class="btn-lg btn-danger float-right mt-5">[x] Salir</button>
