agregado pago de servicio, falta unicamente historico de transacciones

--- a/pagoservicio.html
+++ b/pagoservicio.html
@@ -24,14 +24,14 @@
 
         <div class="container" >
         <div class="display-4 text-light mt-5">
-            <div class="">Seleccione su operación:<br></div>
+            <div class="">Seleccione el servicio a pagar:<br></div>
             <hr style="border-top: 1px solid white;">
                 <div class="row">
                     <div class="btn-group-vertical">
-                        <button type="submit" class="btn-lg btn-warning btn-block mt-5" onclick="document.location='depositar.html'">Depósito</button>
-                        <button type="submit" class="btn-lg btn-warning btn-block" onclick="document.location='retirar.html'">Retiro</button>
-                        <button type="submit" class="btn-lg btn-warning btn-block">Consulta de Saldo</button>
-                        <button type="submit" class="btn-lg btn-warning btn-block">Pago de Servicios</button>
+                        <button type="submit" class="btn-lg btn-warning btn-block mt-5"onclick="document.location='cobroservicio.html'">Energía Eléctrica</button>
+                        <button type="submit" class="btn-lg btn-warning btn-block"onclick="document.location='cobroservicio.html'">Telefonía</button>
+                        <button type="submit" class="btn-lg btn-warning btn-block"onclick="document.location='cobroservicio.html'">Agua Potable</button>
+                        <button type="submit" class="btn-lg btn-warning btn-block"onclick="document.location='cobroservicio.html'">Internet</button>
                     </div>
                 </div>
                     <button type="submit" class="btn-lg btn-danger float-right mt-5">[x] Salir</button>
