--- a/cobroservicio.html
+++ b/cobroservicio.html
@@ -39,7 +39,7 @@
                 <div class="row ">
                     <div class="col">
                         <div class="input-group" style="display: inline-block;">
-                        <button type="submit" class="btn-lg btn-info" onclick="document.location='exitopago.html'">Aceptar</button>
+                        <button type="submit" class="btn-lg btn-info" onclick="document.location='resultadopago.html'">Aceptar</button>
                         <button type="button" class="btn-lg btn-danger">[x] Cancelar</button>
     
                     </div>
