--- a/depositar.html
+++ b/depositar.html
@@ -38,7 +38,7 @@
             <div class="row ">
                 <div class="col">
                     <div class="input-group" style="display: inline-block;">
-                    <button type="submit" class="btn-lg btn-info" onclick="document.location='index.html'">Aceptar</button>
+                    <button type="submit" class="btn-lg btn-info" onclick="document.location='resultadodeposito.html'">Aceptar</button>
                     <button type="button" class="btn-lg btn-danger">[x] Cancelar</button>
 
                 </div>
