--- a/resultadopago.html
+++ b/resultadopago.html
@@ -17,6 +17,7 @@
             <ul class="navbar-nav ml-auto">
                 
                 <li class="nav-item">
+                    <h2>¡Hola, {usuario}!, {cuenta #}</h2>
                     <h2 class="nav-link text-dark">Call Center: +(503)2222-4578</h2>
                 </li>
         </nav>
@@ -29,7 +30,7 @@
                 <div class="col">
                     <div class="input-group" style="display: inline-block;">
                     <button type="submit" class="btn-lg btn-info" onclick="document.location='index.html'">Si</button>
-                    <button type="button" class="btn-lg btn-danger">No</button>
+                    <button type="button" class="btn-lg btn-danger" onclick="document.location='splash.html'">No</button>
 
                 </div>
 
