--- a/retirar.html
+++ b/retirar.html
@@ -16,7 +16,7 @@
             <a href="splash.html"><img class="navbar-brand" src="img/Pokémon_Bank_logo.png"style="width:160px;height:94px"></a>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <h2>¡Hola, {usuario}!</h2>
+                    <h2>¡Hola, {usuario}!, {cuenta #}</h2>
                     <h4 class="nav-link text-dark">Call Center: +(503)2222-4578</h4>
                 </li>
         </nav>
