--- a/cobroservicio.html
+++ b/cobroservicio.html
@@ -17,7 +17,7 @@
             <ul class="navbar-nav ml-auto">
                 
                 <li class="nav-item">
-                    <h2>¡Hola, {usuario}!</h2>
+                    <h2>¡Hola, {usuario}!, {cuenta #}</h2>
                     <h4 class="nav-link text-dark">Call Center: +(503)2222-4578</h4>
                 </li>
         </nav>
