revisión en ortografía

--- a/splash.html
+++ b/splash.html
@@ -21,7 +21,7 @@
         <div class="mx-auto view" >
             <div class="display-4 text-center text-light">
                 <a href="login.html">
-                    Bienvenido<br>Por favor inserte su tarjeta:<br><br>
+                    Bienvenido, <br>Por favor inserte su tarjeta:<br><br>
                 </a>
                 <i class="fas fa-angle-down"></i><br>
                 <i class="far fa-credit-card"></i>
