--- a/pagoservicio.html
+++ b/pagoservicio.html
@@ -13,7 +13,7 @@
             <a href="splash.html"><img class="navbar-brand" src="img/Pokémon_Bank_logo.png"style="width:160px;height:94px"></a>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <h2>¡Hola, {usuario}!, {cuenta #}</h2>
+                    <h2 id="usuario"></h2>
                     <h4 class="nav-link text-dark">Call Center: +(503)2222-4578</h4>
                 </li>
             </ul>
@@ -36,5 +36,6 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
