presentacion de proyecto

--- a/consultasaldo.html
+++ b/consultasaldo.html
@@ -21,7 +21,7 @@
 
         <div class="container" >
           <div class=" text-light mt-5">
-            <div class="display-4">Su saldo es de: ${saldo}<br></div>
+            <div class="display-4" id="saldo"><br></div>
               <hr style="border-top: 1px solid white;">
               <img src="img/piechart.png" class="center-block mb-5">
               <h3 class="center-block">Historial de transacciones<br></h3>
@@ -62,5 +62,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="js/main.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
     </body>
 </html>
