--- a/login.html
+++ b/login.html
@@ -20,15 +20,17 @@
         <div class="mx-auto view" >
             <div class="display-4 text-center text-light">
                 Por favor ingrese su pin:<br>
-                <input type="password" class="form-control-lg text-center" id="formGroupExampleInput" maxlength="4" pattern="[0-9]{1,4}" title="4 valores numéricos">
+
+                <input name="" type="password" class="form-control-lg text-center" id="pin" maxlength="4" pattern="[0-9]{1,4}" title="4 valores numéricos">
                 <button type="button" class="btn-lg btn-warning">Borrar</button>
                 <div class="row ">
                     <div class="col">
                         <div class="input-group" style="display: inline-block;">
-                            <button type="submit" class="btn-lg btn-info" onclick="document.location='index.html'">Aceptar</button>
-                            <button type="button" class="btn-lg btn-danger">[x] Salir</button>
+                            <button type="submit" class="btn-lg btn-info" onclick="validar()">Aceptar</button>
+                            <button type="button" class="btn-lg btn-danger" onclick="document.location='splash.html'">[x] Salir</button>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -36,5 +38,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="js/main.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
+        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.19.2/jquery.validate.min.js"></script>
+    <script type="text/javascript">
+       
+    </script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     </body>
 </html>
