--- a/consultasaldo.html
+++ b/consultasaldo.html
@@ -1,67 +1,92 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Pokémon Bank</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/styles.css">
-        <script src="https://kit.fontawesome.com/45825ad050.js" crossorigin="anonymous"></script>
-    </head>
-    <body class="main_menu">
-        <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-            <a href="splash.html"><img class="navbar-brand" src="img/Pokémon_Bank_logo.png"style="width:160px;height:94px"></a>
-            <ul class="navbar-nav ml-auto">     
-              <li class="nav-item">
-                <h2 id="usuario"></h2>
-                <h4 class="nav-link text-dark">Call Center: +(503)2222-4578</h4>
-              </li>
-            </ul>
-        </nav>
 
-        <div class="container" >
-          <div class=" text-light mt-5">
-            <div class="display-4" id="saldo"><br></div>
-              <hr style="border-top: 1px solid white;">
-              <img src="img/piechart.png" class="center-block mb-5">
-              <h3 class="center-block">Historial de transacciones<br></h3>
-              <table class="table">
-              <thead>
-                  <tr>
-                    <th scope="col h5">Negocio</th>
-                    <th scope="col h5">Fecha</th>
-                    <th scope="col h5">Monto</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                  </tr>
-                </tbody>
-              </table>
-              <div class="float-right">
-                <button type="submit" class="btn-lg btn-info mt-5 mx-4" onclick="document.location='index.html'">Aceptar</button>  
-                <button type="submit" class="btn-lg btn-danger mt-5" onclick="document.location='splash.html'">[x] Salir</button>                    
-              </div>
-          </div>
-        </div>
-              
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        <script src="js/main.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
-    </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Pokémon Bank</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/styles.css">
+  <script src="https://kit.fontawesome.com/45825ad050.js" crossorigin="anonymous"></script>
+</head>
+
+<body class="main_menu">
+  <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+    <a href="splash.html"><img class="navbar-brand" src="img/Pokémon_Bank_logo.png" style="width:160px;height:94px"></a>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <h2 id="usuario"></h2>
+        <h4 class="nav-link text-dark">Call Center: +(503)2222-4578</h4>
+      </li>
+    </ul>
+  </nav>
+
+  <div class="container">
+    <div class=" text-light mt-5">
+      <div class="display-4" id="saldo"><br></div>
+      <hr style="border-top: 1px solid white;">
+      <img src="img/piechart.png" class="center-block mb-5">
+      <h3 class="center-block">Historial de transacciones<br></h3>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col h5">No.</th>
+            <th scope="col h5">Fecha</th>
+            <th scope="col h5">Negocio</th>
+            <th scope="col h5">Monto</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>20/11/2021</td>
+            <td>Pizza Hut</td>
+            <td>$11.10</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>10/11/2021</td>
+            <td>Pollo Campero</td>
+            <td>$41.20</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>15/12/2021</td>
+            <td>Pollo Campero</td>
+            <td>$45.00</td>
+          </tr>
+          <tr>
+            <th scope="row">4</th>
+            <td>15/12/2021</td>
+            <td>Pollo Campero</td>
+            <td>$45.14</td>
+          </tr>
+          <tr>
+            <th scope="row">5</th>
+            <td>15/12/2021</td>
+            <td>Hush Puppies</td>
+            <td>$145.00</td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="float-right">
+        <button type="submit" class="btn-lg btn-info mt-5 mx-4"
+          onclick="document.location='index.html'">Aceptar</button>
+      </div>
+    </div>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <script src="js/main.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
+</body>
+
 </html>
