--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
                     <div class="col">
                         <div class="input-group" style="display: inline-block;">
                             <button type="submit" class="btn-lg btn-info" onclick="validar()">Aceptar</button>
-                            <button type="button" class="btn-lg btn-danger" onclick="document.location='splash.html'">[x] Salir</button>
+                            <button type="button" class="btn-lg btn-danger" onclick="salir()">[x] Salir</button>
                         </div>
                     </div>
 
