--- a/pagoservicio.html
+++ b/pagoservicio.html
@@ -30,7 +30,7 @@
                             <button type="submit" class="btn-lg btn-warning btn-block"onclick="document.location='cobroservicio.html'">Internet</button>
                         </div>
                     </div>
-                <button type="submit" class="btn-lg btn-danger float-right mt-5">[x] Salir</button>
+                <button type="submit" class="btn-lg btn-danger float-right mt-5" onclick="document.location='index.html'">[x] Regresar</button>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
