agregado el chart

--- a/consultasaldo.html
+++ b/consultasaldo.html
@@ -26,7 +26,7 @@
     <div class=" text-light mt-5">
       <div class="display-4" id="saldo"><br></div>
       <hr style="border-top: 1px solid white;">
-      <img src="img/piechart.png" class="center-block mb-5">
+      <canvas id="myChart" width="400" height="400" class="center-block mb-5" style="background-color:white;"></canvas>
       <h3 class="center-block">Historial de transacciones<br></h3>
       <table class="table">
         <thead>
@@ -46,7 +46,7 @@
           </tr>
           <tr>
             <th scope="row">2</th>
-            <td>10/11/2021</td>
+            <td>30/11/2021</td>
             <td>Pollo Campero</td>
             <td>$41.20</td>
           </tr>
@@ -70,6 +70,7 @@
           </tr>
         </tbody>
       </table>
+      
       <div class="float-right">
         <button type="submit" class="btn-lg btn-info mt-5 mx-4"
           onclick="document.location='index.html'">Aceptar</button>
@@ -87,6 +88,40 @@
     crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@3.6.0/dist/chart.min.js"></script>
+  <script>
+    const ctx = document.getElementById('myChart').getContext('2d');
+
+    const myChart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+            labels: ['20/11/2021', '30/11/2021', '15/12/2021'],
+            datasets: [{
+                label: 'Gastos por día',
+                data: [11.10, 41.2, 235.14],
+                backgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                    'rgba(54, 162, 235, 0.2)',
+                    'rgba(255, 206, 86, 0.2)',
+
+                ],
+                borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                ],
+                borderWidth: 2
+            }]
+        },
+        options: {
+            scales: {
+                y: {
+                    beginAtZero: true
+                }
+            }
+        }
+    });
+    </script>
 </body>
 
 </html>
