--- a/depositar.html
+++ b/depositar.html
@@ -24,15 +24,15 @@
                 <div class="center-block mt-3">
                     <div class="input-group">
                     <i class="fas fa-hand-holding-usd"></i>
-                        <input type="input" class="form-control-lg text-center ml-2" id="formGroupExampleInput" placeholder="$0.00">
+                        <input type="input" class="form-control-lg text-center ml-2" id="cantidad" placeholder="$0.00">
                         <button type="button" class="btn-lg btn-warning ml-2">Borrar</button>
                      </div>
                 </div>
                 <div class="row ">
                     <div class="col">
                         <div class="input-group" style="display: inline-block;">
-                            <button type="submit" class="btn-lg btn-info" onclick="document.location='resultadodeposito.html'">Aceptar</button>
-                            <button type="button" class="btn-lg btn-danger">[x] Cancelar</button>
+                            <button type="submit" class="btn-lg btn-info" onclick="deposito()">Aceptar</button>
+                            <button type="button" class="btn-lg btn-danger" onclick="document.location='index.html'">[x] Cancelar</button>
                         </div>
                     </div>
                 </div> 
