--- a/cobroservicio.html
+++ b/cobroservicio.html
@@ -22,10 +22,10 @@
 
         <div class="mx-auto view" >
             <div class="display-4 text-center text-light">
-                Ingrese el número de cuenta del servicio:<br>
+                Ingrese el monto del servicio<br>
                 <div class="center-block mt-3">
                     <div class="input-group">
-                        <input type="input" class="form-control-lg text-center ml-2" id="formGroupExampleInput" placeholder="X-XXX-XXXX">
+                        <input type="input" class="form-control-lg text-center ml-2" id="formGroupExampleInput" placeholder="$0.00" onkeypress="if ( isNaN(this.value + String.fromCharCode(event.keyCode) )) return false;">
                         <button type="button" class="btn-lg btn-warning ml-2">Borrar</button>
                     </div>
                 </div>
