agregadas funciones de retiro y deposito de fondos

--- a/cobroservicio.html
+++ b/cobroservicio.html
@@ -22,7 +22,7 @@
 
         <div class="mx-auto view" >
             <div class="display-4 text-center text-light">
-                Ingrese el monto del servicio<br>
+                Ingrese el monto del servicio:<br>
                 <div class="center-block mt-3">
                     <div class="input-group">
                         <input type="input" class="form-control-lg text-center ml-2" id="formGroupExampleInput" placeholder="$0.00" onkeypress="if ( isNaN(this.value + String.fromCharCode(event.keyCode) )) return false;">
@@ -44,5 +44,6 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="js/main.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     </body>
 </html>
