--- a/depositar.html
+++ b/depositar.html
@@ -24,7 +24,7 @@
                 <div class="center-block mt-3">
                     <div class="input-group">
                     <i class="fas fa-hand-holding-usd"></i>
-                        <input type="input" class="form-control-lg text-center ml-2" id="cantidad" placeholder="$0.00"onkeypress="if ( isNaN(this.value + String.fromCharCode(event.keyCode) )) return false;">
+                        <input type="input" class="form-control-lg text-center ml-2" id="cantidad" placeholder="$0.00" onkeypress="if ( isNaN(this.value + String.fromCharCode(event.keyCode) )) return false;">
                         <button type="button" class="btn-lg btn-warning ml-2">Borrar</button>
                      </div>
                 </div>
@@ -44,5 +44,6 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="js/main.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     </body>
 </html>
