--- a/pagoservicio.html
+++ b/pagoservicio.html
@@ -24,10 +24,10 @@
                     <hr style="border-top: 1px solid white;">
                     <div class="row">
                         <div class="btn-group-vertical">
-                            <button type="submit" class="btn-lg btn-warning btn-block mt-5"onclick="document.location='cobroservicio.html'">Energía Eléctrica</button>
-                            <button type="submit" class="btn-lg btn-warning btn-block"onclick="document.location='cobroservicio.html'">Telefonía</button>
-                            <button type="submit" class="btn-lg btn-warning btn-block"onclick="document.location='cobroservicio.html'">Agua Potable</button>
-                            <button type="submit" class="btn-lg btn-warning btn-block"onclick="document.location='cobroservicio.html'">Internet</button>
+                            <button type="submit" class="btn-lg btn-warning btn-block mt-5"onclick="pagoServicio(1)">Energía Eléctrica</button>
+                            <button type="submit" class="btn-lg btn-warning btn-block"onclick="pagoServicio(2)">Telefonía</button>
+                            <button type="submit" class="btn-lg btn-warning btn-block"onclick="pagoServicio(3)">Agua Potable</button>
+                            <button type="submit" class="btn-lg btn-warning btn-block"onclick="pagoServicio(4)">Internet</button>
                         </div>
                     </div>
                 <button type="submit" class="btn-lg btn-danger float-right mt-5" onclick="document.location='index.html'">[x] Regresar</button>
@@ -38,5 +38,6 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="js/main.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     </body>
 </html>
