--- a/resultadopago.html
+++ b/resultadopago.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/styles.css">
         <script src="https://kit.fontawesome.com/45825ad050.js" crossorigin="anonymous"></script>
     </head>
-    <body class=" d-flex align-items-center splash">
+    <body class=" d-flex align-items-center splash" onload="inicializarpago()">
         <nav class="navbar navbar-expand-lg navbar-light bg-warning fixed-top">
         <img class="navbar-brand" src="img/Pokémon_Bank_logo.png"style="width:160px;height:94px">
             <ul class="navbar-nav ml-auto">
@@ -37,5 +37,6 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="js/main.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     </body>
 </html>
