--- a/retirar.html
+++ b/retirar.html
@@ -25,14 +25,14 @@
                 <div class="center-block mt-3">
                     <div class="input-group">
                         <i class="fas fa-funnel-dollar"></i>
-                        <input type="input" class="form-control-lg text-center ml-2" id="formGroupExampleInput" placeholder="$0.00">
+                        <input type="input" class="form-control-lg text-center ml-2" id="cantidadretiro" placeholder="$0.00">
                         <button type="button" class="btn-lg btn-warning ml-2">Borrar</button>
                     </div>
                 </div>
                 <div class="row ">
                     <div class="col">
                         <div class="input-group" style="display: inline-block;">
-                            <button type="submit" class="btn-lg btn-info" onclick="document.location='resultadoretiro.html'">Aceptar</button>
+                            <button type="submit" class="btn-lg btn-info" onclick="retiro()">Aceptar</button>
                             <button type="button" class="btn-lg btn-danger">[x] Cancelar</button>
                         </div>
                     </div>
@@ -44,5 +44,6 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="js/main.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     </body>
 </html>
