funcion para pago de recibos

--- a/consultasaldo.html
+++ b/consultasaldo.html
@@ -77,7 +77,7 @@
       
       <div class="float-right">
         <button type="submit" class="btn-lg btn-info mt-5 mx-4"
-          onclick="document.location='index.html'">Aceptar</button>
+        onclick="cancelar()">Aceptar</button>
       </div>
     </div>
   </div>
