--- a/resultadopago.html
+++ b/resultadopago.html
@@ -25,8 +25,8 @@
                 <div class="row ">
                     <div class="col">
                         <div class="input-group" style="display: inline-block;">
-                            <button type="submit" class="btn-lg btn-info" onclick="document.location='index.html'">Si</button>
-                            <button type="button" class="btn-lg btn-danger" onclick="document.location='splash.html'">No</button>
+                            <button type="submit" class="btn-lg btn-info" onclick="cancelar()">Si</button>
+                            <button type="button" class="btn-lg btn-danger" onclick="salir()">No</button>
                         </div>
                     </div>
                 </div>
