--- a/resultadoretiro.html
+++ b/resultadoretiro.html
@@ -21,7 +21,7 @@
         </nav>
         <div class="mx-auto view" >
             <div class="display-4 text-center text-light">
-                Fondos retirados exitosamente<br>¿Desea realizar otra transacción?<br><br>
+                Transacción exitosa<br>¿Desea realizar otra transacción?<br><br>
                 <div class="row ">
                     <div class="col">
                         <div class="input-group" style="display: inline-block;">
