--- a/retirar.html
+++ b/retirar.html
@@ -32,8 +32,8 @@
                 <div class="row ">
                     <div class="col">
                         <div class="input-group" style="display: inline-block;">
-                            <button type="submit" class="btn-lg btn-info" onclick="retiro()">Aceptar</button>
-                            <button type="button" class="btn-lg btn-danger">[x] Cancelar</button>
+                            <button type="submit" class="btn-lg btn-info" onclick="retiro(document.getElementById('cantidadretiro').value)">Aceptar</button>
+                            <button type="button" class="btn-lg btn-danger" onclick="cancelar()">[x] Cancelar</button>
                         </div>
                     </div>
                 </div>
