--- a/cobroservicio.html
+++ b/cobroservicio.html
@@ -21,18 +21,18 @@
         </nav>
 
         <div class="mx-auto view" >
-            <div class="display-4 text-center text-light">
-                Ingrese el monto del servicio:<br>
+            <div class="display-4 text-center text-light" id="tiposervicio">
+                Ingrese el monto del servicio: <script></script><br>
                 <div class="center-block mt-3">
                     <div class="input-group">
-                        <input type="input" class="form-control-lg text-center ml-2" id="formGroupExampleInput" placeholder="$0.00" onkeypress="if ( isNaN(this.value + String.fromCharCode(event.keyCode) )) return false;">
+                        <input type="input" class="form-control-lg text-center ml-2" id="montorecibo" placeholder="$0.00" onkeypress="if ( isNaN(this.value + String.fromCharCode(event.keyCode) )) return false;">
                         <button type="button" class="btn-lg btn-warning ml-2">Borrar</button>
                     </div>
                 </div>
                 <div class="row ">
                     <div class="col">
                         <div class="input-group" style="display: inline-block;">
-                            <button type="submit" class="btn-lg btn-info" onclick="document.location='montoservicio.html'">Aceptar</button>
+                            <button type="submit" class="btn-lg btn-info" onclick="procesarpago()">Aceptar</button>
                             <button type="button" class="btn-lg btn-danger">[x] Cancelar</button>
                         </div>
                     </div>
