--- a/depositar.html
+++ b/depositar.html
@@ -32,7 +32,7 @@
                     <div class="col">
                         <div class="input-group" style="display: inline-block;">
                             <button type="submit" class="btn-lg btn-info" onclick="deposito()">Aceptar</button>
-                            <button type="button" class="btn-lg btn-danger" onclick="document.location='index.html'">[x] Cancelar</button>
+                            <button type="button" class="btn-lg btn-danger" onclick="cancelar()">[x] Cancelar</button>
                         </div>
                     </div>
                 </div> 
