--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
                 Por favor ingrese su pin:<br>
 
                 <input name="" type="password" class="form-control-lg text-center" id="pin" maxlength="4" pattern="[0-9]{1,4}" title="4 valores numéricos" onkeypress="if ( isNaN( String.fromCharCode(event.keyCode) )) return false;">
-                <button type="button" class="btn-lg btn-warning">Borrar</button>
+                <button type="button" class="btn-lg btn-warning" onclick="borrar(document.getElementById('pin'))">Borrar</button>
                 <div class="row ">
                     <div class="col">
                         <div class="input-group" style="display: inline-block;">
